all_slugs.txt
[eval]:1
const axios=require('axios');(async()=>{const{data}=await axios.get('https://api.llama.fi/protocols',{timeout:30000});const names=['uniswap','pancakeswap','curve','aster','gmx','hyperliquid','aevo','dydx','raydium','orca','balancer','aerodrome','velodrome','trader-joe','drift','thena','quickswap','camelot','1inch','sushiswap','across','stargate','synapse','hop-protocol','connext','debridge','cowswap','kwenta','perpetual-protocol','kamino','osmosis','orderly-network','mux-protocol','jupiter'];for(const n of names){const parentId='parent#'+n;const children=data.filter(p=>p.parentProtocol===parentId);const allSlugs=children.map(c=>c.slug);if(allSlugs.length>0){console.log(n+': ['+allSlugs.map(s=>\
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              ^
Unexpected eof

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.19.0
